add comments and make new changes regarding error

--- a/templates/about.html
+++ b/templates/about.html
@@ -31,7 +31,7 @@
                 <img src="{{ url_for('static', filename='images/cat.jpeg') }}" alt="Katze" style="width: 100%;">
                 <div class="container">
                     <h2>Huynh Tuan Phat</h2>
-                    <p class="title">Person 1</p>
+                    <p class="title">Designer & Coder</p>
                     <p>A catperson</p>
                     <p>10423088@student.vgu.edu.vn</p>
                 </div>
@@ -43,7 +43,7 @@
                 <img src="{{ url_for('static', filename='images/dog.jpeg') }}" alt="Tai" style="width: 100%;">
                 <div class="container">
                     <h2>Vo Thanh Tai</h2>
-                    <p class="title">Person 2</p>
+                    <p class="title">Presenter & Writer</p>
                     <p>I love dogs</p>
                     <p>10423169@student.vgu.edu.vn</p>
                 </div>
